# LANGOD

./: .gitignore  flake.nix
haskell/playground_01/: Main.hs
neetcode150/arrays_n_hashing/: 3sum.py  contains_duplicate.py  encode_and_decode_strings.py  group_anagrams.py  longest_consecutive_sequence.py  product_of_array_except_self.py  top_k_frequent_elements.py  two_sum.py  valid_palindrome.py  valid_sudoku.py
neetcode150/sliding_window/: best_time_to_buy_and_sell_stock.py  longest_repeating_character_replacement.py  longest_substring_without_repeating_characters.py  minimum_window_substring.py  permutation_in_string.py
neetcode150/two_pointers/: container_with_most_water.py  trapping_rain_water.py  two_sum_2.py  valid_anagram.py
ocaml/M99_ocaml_problems/: dune-project
ocaml/M99_ocaml_problems/lib/: dune
ocaml/first_day_with_ocaml/: first_day.ml
random_tuts/ocaml/M99_ocaml_problems/test/: dune
random_tuts/ocaml/first_day_with_ocaml/: first_day.ml
random_tuts/ocaml/first_dune_proj/: dune-project
random_tuts/ocaml/first_dune_proj/lib/: dune
random_tuts/ocaml/first_dune_proj/test/: dune
random_tuts/rust/rust-monads/: Cargo.toml
rust/rust-monads/src/: main.rs
